--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
             <a class="navbar-brand" href="#">
               <span style="font-size:150%">
                 ${router.title & t}
-                <img src="${theme.files.gb_logo_png}" width="24" style="float:right;margin-left:15px;" />
+                <img src="${theme.files.gb_logo_png}" width="24" style="float:right;margin-left:15px;margin-right:15px;" />
               </span>
               <!--i class="fa fa-home"></i-->
             </a>
@@ -28,7 +28,7 @@
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-left">
-              <li class="menu-item" style="margin-top: 16px;">
+              <li class="menu-item" style="margin-top: 16px;margin-left:15px;">
                 <!-- if.bind="privileges.EDITOR"-->
                 <user-mode></user-mode>
               </li>
