--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -101,7 +101,7 @@
                         ${'members.life-summary' | t} ${member.member_info.first_name}
                     </h4>
                     <h3 show.bind="story_0.name || story_0.topic" dir="rtl" style="padding:0;margin:0;">
-                        <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_0, 'show')">&nbsp;&nbsp;</i>
+                        <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_0, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit')">&nbsp;</i>
                         ${story_0.name}
                     </h3>
@@ -118,7 +118,7 @@
 
                 <div class="col-md-3 story-box last" show.bind="story_4.story_text != ''">
                     <h4 show.bind="story_4.name" dir="rtl">
-                        <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_4, 'show')">&nbsp;</i>
+                        <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_4, 'show')">&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>
                         <span innerhtml.bind="story_4.name"></span>
                     </h4>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-md-3 story-box" show.bind="story_3.story_text != ''">
                     <h4 show.bind="story_3.name" dir="rtl">
-                        <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3, 'show')">&nbsp;</i>
+                        <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3, 'show')">&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>
                         <span innerhtml.bind="story_3.name"></span>
                     </h4>
@@ -140,7 +140,7 @@
                 </div>
                 <div class="col-md-3 story-box" show.bind="story_2.story_text != ''" >
                     <h4 show.bind="story_2.name" dir="rtl" >
-                        <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2, 'show')">&nbsp;&nbsp;</i>
+                        <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>
                         <span innerhtml.bind="story_2.name"></span>
                     </h4>
@@ -151,7 +151,7 @@
                 </div>
                 <div class="col-md-3 story-box" show.bind="story_1.story_text != '' || user.privileges.EDITOR">
                     <h4 show.bind="story_1.name" dir="rtl">
-                        <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1, 'show')">&nbsp;&nbsp;</i>
+                        <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>
                         <span innerhtml.bind="story_1.name"></span>
                     </h4>
