--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -43,7 +43,7 @@
                             </a>
                             <a class="photo-maximizer" css="position:absolute;right:0px;top:${width/2}px;" 
                                 click.trigger="maximize_photo(photo, $event)">
-                                <i class="fa fa-expand"></i>
+                                <i class="fa fa-expand fa-xs"></i>
                             </a>
                         </span>
                     </div>
