--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -4,7 +4,7 @@
     <div css="margin-top:10px;margin-right:0;margin-left:0;padding:0;width:${width}">
         <div class="row">
             <span show.bind="story.name" dir="rtl" style="padding:0;margin:0;float:right;">
-                <i class="fa fa-sm fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story, 'show')">&nbsp;&nbsp;</i>
+                <i class="fa fa-sm fa-expand is-link" t="[title]stories.zoom" click.trigger="zoom_out(story, 'show')">&nbsp;&nbsp;</i>
                 <i if.bind="user.privileges.EDITOR" class="fa fa-sm fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story, 'edit')">&nbsp;</i>
                 <i if.bind="settings.checkable && user.editing" class="fa fa-sm fa-circle${story.checked ? '' : '-o'} is-link" t="[title]stories.checking" click.trigger="toggle_checked()">&nbsp;</i>
             <span if.bind="settings.show_date &&story.timestamp">${story.timestamp} | </span>
