zoom from photo strip in home. start background reindex words.

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -2,7 +2,8 @@
     <require from='./home.css'></require>
     <div style="margin-top:60px;">
         <div id="photo-strip">
-            <photo-strip source.bind="photo_list" slides.bind="slides" id="1" action.bind="action" settings.bind="{arrows:true, slide_show: 5}"></photo-strip>
+            <photo-strip source.bind="photo_list" slides.bind="slides" id="1" action.bind="action" 
+                action_key="Zoom1" settings.bind="{arrows:true, slide_show: 5}"></photo-strip>
         </div>
     </div>
     <div class="row panel main-panel">
