--- a/src/app.html
+++ b/src/app.html
@@ -42,7 +42,7 @@
         </div>
       </div>
     </div>
-    <div id="footer" class="navbar-fixed-bottom-xxx navbar navbar-default" style="border:none;background-color:rgba(0,0,0,0);margin:0;padding:0;">
+    <div id="footer" class="navbar-fixed-bottom-xxx navbar navbar-default" style="border:none;background-color:rgba(0,0,0,0);margin:0;padding:0;margin-left:-16px;">
       <div class="footer-area" style="padding-left:200px;padding-top:40px;" css="background-image:url('${theme.files.footer_background}')">
         <a style="padding-top: 50px;cursor:pointer;color:gray;" click.delegate="contact_us()">Built by Lifestone</a>
       </div>
