--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -25,30 +25,27 @@
                                 </button>
                             </div>
                             <div class="form-group">
-                                <button if.bind="user.editing && checked_photos.size > 0 && params.grouped_selected_topics.length==0 && params.selected_topics.length>0"
+                                <button if.bind="selected_photos.size > 0" t="[title]photos.download" class="btn btn-basic btn-md"><i class="fa fa-upload fa-rotate-180 -fa-xs"></i></button>
+                            </div>
+                            <div class="form-group">
+                                <button if.bind="phase != 'none'" class="btn btn-basic btn-md">${phase}</i></button>
+                            </div>
+                            <div class="form-group" if.bind="user.editing && done_selecting && selected_photos.size > 0">
+                                <button
+                                     disabled.bind="params.grouped_selected_topics.length>0 || (params.selected_topics.length==0 && params.selected_photographers.length != 1)"
                                      class="btn btn-basic btn-md"
                                      click.trigger="apply_to_selected()">
                                      ${'photos.apply-to-selected' | t}
                                 </button>
+                                <help topic="apply-to-selected-photos" position="bottom"></help>
                             </div>
-                            <div class="form-group">
-                                <button if.bind="checked_photos.size > 0" t="[title]photos.download" class="btn btn-basic btn-md"><i class="fa fa-upload fa-rotate-180 -fa-xs"></i></button>
-                            </div>
-                            <div class="form-group">
-                                <button if.bind="checked_photos.size > 0  && ! done_checking && user.editing" 
-                                    t="[title]photos.done-checking" 
-                                    click.trigger="finish_checking()"
+                            <div class="form-group" if.bind="selected_photos.size > 0  && ! done_selecting && user.editing">
+                                <button 
+                                    click.trigger="finish_selecting()"
                                     class="btn btn-basic btn-md">
-                                    <i class="fa fa-check-circle fa-xs"></i>
+                                    ${'photos.done-selecting' | t}
                                 </button>
-                            </div>
-                            <div class="form-group">
-                                <button if.bind="checked_photos.size > 0  && done_checking && user.editing" 
-                                    t="[title]photos.apply-to-checked" 
-                                    click.trigger="apply_to_checked()"
-                                    class="btn btn-basic btn-md">
-                                    <i class="fa fa-check fa-xs"></i>
-                                </button>
+                                <help topic="done-selecting-photos" position="bottom"></help>
                             </div>
                         </form>
                     </div>
