--- a/src/resources/elements/help.html
+++ b/src/resources/elements/help.html
@@ -1,6 +1,6 @@
 <template>
     <button style="border-radius:50%;" class="btn btn-info btn-xs" 
-        click.delegate="edit_help_message()"
+        click.delegate="edit_help_message($event)"
         aubs-popover="custom-popover.bind: customPopover;position.bind: position;" >
         <i class="fa fa-question"></i>
     </button>
