--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -100,7 +100,7 @@
                     <h4 innherhtml.bind="story_0.topic" style="margin-top:16px;margin-bottom:0px;color:gray;">
                         ${'members.life-summary' | t} ${member.member_info.first_name}
                     </h4>
-                    <h3 show.bind="story_0.name || story_0.topic" dir="rtl" style="padding:0;margin:0;">
+                    <h3 show.bind="story_0.name || story_0.topic" dir="rtl" style="padding:0;margin:0;margin-bottom:8px;">
                         <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_0, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit')">&nbsp;</i>
                         ${story_0.name}
