--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -78,16 +78,16 @@
                         <multi-select options.bind="photographer_list" place_holder_text="photos.click-photographer" settings.bind="{mergeable:false, source_mergeable:true}"
                             change.delegate="handle_photographer_change($event)"></multi-select>
                     </div>
-                    <div class="row" style="width:90%;margin-top: 20px;">
+                    <div class="row" style="margin-top: 20px;">
                         <form role="form">
-                            <select value.bind="params.selected_days_since_upload" style="height:32px;" change.delegate="handle_change($event)">
+                            <select value.bind="params.selected_days_since_upload" style="height:32px;width:90%;" change.delegate="handle_change($event)">
                                 <option repeat.for="option of days_since_upload_options" model.bind="option">${option.name}</option>
                             </select>
                         </form>
                     </div>
-                    <div class="row" style="width:90%;margin-top: 20px;" if.bind="user.isLoggedIn">
+                    <div class="row" style="margin-top: 20px;" if.bind="user.isLoggedIn">
                         <form role="form">
-                            <select value.bind="params.selected_uploader" style="height:32px;" change.delegate="handle_change($event)">
+                            <select value.bind="params.selected_uploader" style="height:32px;width:90%;" change.delegate="handle_change($event)">
                                 <option repeat.for="option of uploader_options" model.bind="option">${option.name}</option>
                             </select>
                         </form>
@@ -96,14 +96,14 @@
                         <form class="form-horizontal" submit.delegate="handle_from_date($event)">
                             <div class="form-group">
                                 <div class="col-sm-6">
-                                    <input type="text" id="from-date" value.bind="params.from_date & debounce" style="width:106px;margin-right:-32px;padding-right:6px;"
+                                    <input type="text" id="from-date" value.bind="params.from_date & debounce" style="width:158%;margin-right:-32px;padding-right:6px;"
                                         t="[placeholder]photos.enter-date" change.delegate="handle_change($event)">
                                 </div>
                                 <label class="col-sm-6 control-label" for="params.from-date & debounce">${'photos.from-date' & t}</label>
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-6">
-                                    <input type="text" id="to-date" value.bind="params.to_date & debounce" style="width:106px;margin-right:-32px;padding-right:6px;"
+                                    <input type="text" id="to-date" value.bind="params.to_date & debounce" style="width:158%;margin-right:-32px;padding-right:6px;"
                                         t="[placeholder]photos.enter-date" change.delegate="handle_change($event)">
                                 </div>
                                 <label class="col-sm-6 control-label" for="to-date">${'photos.to-date' & t}</label>
