--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -83,10 +83,12 @@
                         </multi-select>
                     </div>
                     <div if.bind="user.privileges.ADVANCED && user.editing" class="row">
-                        <button class="btn btn-${params.link_class} btn-xs" click.trigger="toggle_link_class()" t="[title]stories.older-links">
+                        <button class="btn btn-${params.link_class} btn-xs" 
+                            click.trigger="toggle_link_class()" t="[title]stories.older-links">
                             <i class="fa fa-link fa-xs"></i>
                         </button>
-                        <button class="btn btn-${params.link_class} btn-xs" click.trigger="toggle_deleted_stories()" t="[title]stories.undelete">
+                        <button class="btn btn-${params.link_class} btn-xs ${params.deleted_stories ? 'active' : ''}" 
+                            click.trigger="toggle_deleted_stories()" t="[title]stories.undelete">
                             <i class="fa fa-trash fa-rotate-180 fa-xs"></i>
                         </button>
                     </div>
