--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -26,9 +26,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7" style="padding-right:30px">
                 <div class="row">
-                    <div class="col-md-2 col-md-offset-10" if.bind="story.source">
+                    <div class="col-md-4 col-md-offset-8" if.bind="story.source">
                         <span style="float:right;direction:rtl">${story.source}:</span>
                     </div>
                 </div>
