--- a/src/members/members.html
+++ b/src/members/members.html
@@ -4,7 +4,7 @@
     <section class="container content-area">
         <div class="row top-head" css="margin-top:30px;background-image:url('${theme.files.top_background}');">
             <div  style="background-color:rgba(120, 120, 120, 0.3);height:75px;padding-top:5px;padding-right:15px;">
-                <h1 dir="rtl"><help topic="members" position="bottom" ></help> ${"members.members" | t}</h1>
+                <h1 dir="rtl">${"members.members" | t}</h1>
             </div>
             <div class="row" style="margin-bottom:20px">
                 <div class="col-md-1">
@@ -18,9 +18,14 @@
                     </a>
                 </div>
                 <div class="col-md-5">
-                    <div class="input-group" style="width:100%;margin-top:15px;">
-                        <input dir="rtl" type="search" class="form-control" t="[placeholder]members.filter" style="font-size:18px;height:38px;" value.bind="filter & debounce">
-                    </div>
+                    <form class="form-inline">
+                        <div class="input-group" style="padding-top:16px;">
+                            <help topic="members" position="bottom" ></help> 
+                        </div>
+                        <div class="input-group" style="margin-top:15px;width:80%;">
+                            <input dir="rtl" type="search" class="form-control" t="[placeholder]members.filter" style="font-size:18px;height:38px;" value.bind="filter & debounce">
+                        </div>
+                    </form>
                 </div>
             </div>
 
