--- a/src/app.html
+++ b/src/app.html
@@ -5,18 +5,18 @@
     <div class="row">
       <div class="center-block">
         <nav class="navbar navbar-default navbar-fixed-top navbar-centered sb-navbar" role="navigation">
-          <div class="navbar-header navbar-right" style="margin-left: 40px;">
+          <div class="navbar-header navbar-right" style="margin-left: 40px;padding-bottom:8px;">
             <a class="navbar-brand" href="#">
-              <span style="font-size:150%">
+              <span style="font-size:200%;">
                 ${router.title & t}
-                <img src="${theme.files.gb_logo_png}" width="24" style="float:right;margin-left:15px;margin-right:15px;" />
+                <img src="${theme.files.gb_logo_png}" width="32" style="float:right;margin-left:15px;margin-right:15px;" />
               </span>
               <!--i class="fa fa-home"></i-->
             </a>
           </div>
 
           <div class="collapse navbar-collapse" id="skeleton-navigation-navbar-collapse">
-            <ul class="nav navbar-nav navbar-right" style="font-size:150%">
+            <ul class="nav navbar-nav navbar-right" style="font-size:180%;margin-top:4px;">
               <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
                 <a data-toggle="collapse" data-target="#skeleton-navigation-navbar-collapse.in" href.bind="row.href">${row.title & t}</a>
               </li>
