--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -1,8 +1,8 @@
 <template>
     <require from='./photos.css'></require>
     <section class="container content-area" css="height: ${win_height-600}px;">
-        <div class="row" style="margin-top:30px">
-            <div style="background-color:rgba(120, 120, 120, 0.3);height:75px;padding-top:5px;padding-right:15px;">
+        <div class="row" style="margin-top:30px;background-image:url('${theme.files.top_background}');background-repeat:no-repeat">
+            <div style="background-color:rgba(120, 120, 120, 0.3);height:95px;padding-top:20px;padding-right:15px;">
                 <h1 dir="rtl"> ${"photos.photos-store" | t}</h1>
             </div>
         </div>
