--- a/src/home/home.html
+++ b/src/home/home.html
@@ -29,11 +29,21 @@
             </h2>
             <ul style="max-height:220px;overflow:auto;">
                 <li repeat.for="story of stories_sample" dir="rtl">
-                    <div style="margin:0;padding:0;margin-top:12px;max-height:80px;border-bottom:solid 2px lightgray;padding-bottom:8px;" >
+                    <div style="margin-top:12px;max-height:100px;min-height:100px;padding-bottom:30px;border-bottom:solid 2px lightgray;position:relative;" >
                         <h4 dir="rtl" style="float:right;margin:0;padding:0;cursor:pointer;" click.delegate="jump_to_the_full_story(story)">
-                            ${story.name} <i class="fa fa-play fa-xs fa-rotate-180" style="color:gray;"></i></h4><br/>
-                        <p dir="rtl" innerhtml.bind="story.story" style="text-align:right;max-height:50px;font-size:13px;width:100%;margin:0;padding:0;overflow:hidden;">
+                            ${story.name}
+                        </h4>
+                        <!--div style="margin:20px;"-->
+                            <p dir="rtl" innerhtml.bind="story.story" style="text-align:right;max-height:50px;font-size:13px;width:100%;overflow:hidden;">
                         </p>
+                        <!--/div-->
+                        <div style="position:absolute;bottom:0px;left:12px;cursor:pointer;">
+                            <a click.delegate="jump_to_the_full_story(story)">
+                                <span if.bind="story.used_for==api.constants.story_type.STORY4EVENT">
+                                    ${'stories.to-the-full-story' | t }...
+                                </span>
+                            </a>
+                        </div>
                     </div>
                 </li>
             </ul>
