--- a/src/app.html
+++ b/src/app.html
@@ -37,7 +37,7 @@
           </div>
         </nav>
 
-        <div id="router-view" class="page-host flexcontainer" css="min-height:${min_height}px;margin:0;padding:0;background-image:url('${theme.files.content_background}');">
+        <div id="router-view" class="page-host flexcontainer" css="min-height:${router_view_height};margin:0;padding:0;background-image:url('${theme.files.content_background}');">
           <router-view></router-view>
         </div>
       </div>
