--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -11,7 +11,7 @@
             <div class="col-md-7" style="padding-left:40px;">
                 <img src.bind="photo_src" width="${photo_width}" />
             </div>
-            <div class="col-md-5" innerhtml.bind="photo_story" dir="rtl">
+            <div class="col-md-5 fr-view" innerhtml.bind="photo_story" dir="rtl">
             </div>
         </div>
     </div>
